# kvpass

./: config.toml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: README.md  commands.md  configuration.md  firewall.md  installation.md  shell-completion.md  usage.md
docs/diagrams/: kvpass-tui-flow.md
kvpass/: cli.py  clipboard.py  config.py  editor.py  firewall.py  kv.py  mapping.py  tui.py
tests/: test_tui_app.py  test_tui_filter.py
